FInished layout of the second page of app

--- a/src/Xamarin/TheLosers.BH4.XamarinFormsApp/TheLosers.BH4.XamarinFormsApp/TheLosers.BH4.XamarinFormsApp.csproj
+++ b/src/Xamarin/TheLosers.BH4.XamarinFormsApp/TheLosers.BH4.XamarinFormsApp/TheLosers.BH4.XamarinFormsApp.csproj
@@ -16,7 +16,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Page1.xaml">
+    <Compile Update="InputPage.xaml.cs">
+      <DependentUpon>InputPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="InputPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
