Started Window's Forms aplication

--- a/src/Xamarin/TheLosers.BH4.XamarinFormsApp/TheLosers.BH4.XamarinFormsApp.Android/TheLosers.BH4.XamarinFormsApp.Android.csproj
+++ b/src/Xamarin/TheLosers.BH4.XamarinFormsApp/TheLosers.BH4.XamarinFormsApp.Android/TheLosers.BH4.XamarinFormsApp.Android.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -87,11 +87,5 @@
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\TheLosers.BH4.XamarinFormsApp\TheLosers.BH4.XamarinFormsApp.csproj">
-      <Project>{5916373A-7114-4D75-A78F-7F7722B7C6E8}</Project>
-      <Name>TheLosers.BH4.XamarinFormsApp</Name>
-    </ProjectReference>
-  </ItemGroup>
- <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
